@@ -4,6 +4,7 @@
 
 - RESPEC required for Circle of the Night druid older than v52
 - RESPEC required for fighter with Weapon Specialization older than v61
+- added Gameplay > Rules > House setting to allow clubs to be thrown
 - added Tactician Adept feat and Web spell
 - improved Archery support for darts and lightning launcher
 - improved Path of the Elements' elemental burst SFX
